# NightWatcher

./: .gitignore  CMakeLists.txt  README.md  main  main.c  main.h  nightwatcher  nightwatcher.h  nightwatcher_db
WordPress_Plugin/: block.js  nightwatcher-api.php
command_handler/: command_handler.c  command_handler.h
conf/: nwconf.conf  nwconf.conf.example
config_file_handler/: config_file_handler.c  config_file_handler.h
db_handler/: db_handler.c  db_handler.h
docs/: NightWatcher.md
nwconsole/: CMakeLists.txt  nwconsole.c  nwconsole.h
nwconsole/conf/: nwconsole.conf  nwconsole.conf.example
parser/: parser.c  parser.h
send_data/GilinskyResearch/: gilinskyresearch.conf.example  nightwatcher_client.c  nightwatcher_client.h
sqm-le/: sqm_le.c  sqm_le.h
weather/AmbientWeather/: AmbientWeather.c  AmbientWeather.h
